--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
             <div class="nav-account border">
-                <p><span id="sp3"><a href="login.html">Hello, sign in</a></span></p>
+                <p><span id="sp3"><a href="index.html">Hello, sign in</a></span></p>
                 <select name="" id="">
                 <option value="">Account & Lists</option>
                 </select>
